--- a/iCCupUnrealMapHack/iCCupUnrealMapHack/packages.config
+++ b/iCCupUnrealMapHack/iCCupUnrealMapHack/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ini-parser" version="2.5.2" targetFramework="net40" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net40" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net40" requireReinstallation="true" />
 </packages>
